Added support to copy auditor app to standby RP as part of install

--- a/userfiles/auditor.cfg.yml
+++ b/userfiles/auditor.cfg.yml
@@ -33,3 +33,8 @@ COLLECTOR:
     cronPrefix: "audit_cron_collector_"
     vrf: "global-vrf"
     output_xml_dir: "/misc/app_host"
+
+STANDBY_INSTALLER:
+    srcDir: "/misc/scratch"
+    appName: "auditor"
+    appDir: "/misc/scratch"
