--- a/userfiles/compliance.cfg.yml
+++ b/userfiles/compliance.cfg.yml
@@ -1,4 +1,6 @@
 ---
+outgoing_interface: "GigabitEthernet0/0/0/0"
+
 DIR:
     - NAME: /usr/bin
       CMD: 
@@ -17,17 +19,16 @@ FILE:
       CON: on
       CMD:
           - "ls -la"
+
     - NAME: /etc/passwd
       CHK: on 
       CON: on
-    - NAME: /etc/syslog/syslog.conf
-      CHK: on
-      CMD:
-          - "ls -lrht"
+
     - NAME: /usr/bin/python
       CHK: on
       CMD:
           - "ls -la"
+
     - NAME: /etc/default/dhcp-server
       CHK: on
       CON: on
