--- a/userfiles/server.cfg.yml
+++ b/userfiles/server.cfg.yml
@@ -1,8 +1,13 @@
 ---
 USER: "vagrant"
 
-# Specify Path relative to packaged collector.bin in collector.spec
+# Specify Path to private key relative to packaged collector.bin in collector.spec
 ID_RSA_FILE_PATH: "./userfiles/id_rsa_server" 
+
+# Specify the PATH in XR-LXC where you'd like to store the private key 
+# so that it can be replaced during execution without having to recompile
+
+#ID_RSA_XR_LXC_FILE_PATH: "/root/id_rsa"
 
 # SERVER_HOST is either the Domain name or IP address of server
 
@@ -21,23 +26,23 @@ SERVER_HOST:
 # compliance XML file. 
 # Valid supported parameters today are:
 #      1)  router_hostname
-#      2)  router_mgmt_ip
+#      2)  router_ip
 #
 # So, if both the above parameters are specified, then final compliance 
 # file will look something like:
 #
-#        compliance_audit_{{router_hostname}}_{{router_mgmt_ip}}.xml
+#        compliance_audit_{{router_hostname}}_{{router_ip}}.xml
 #
 #
 #    For e.g. compliance_audit_rtr1_11_11_11_33.xml
 #             where  rtr1        =  router_hostname
-#                    11_11_11_33 =  router_mgmt_ip (with . replaced with _) 
+#                    11_11_11_33 =  router_ip (with . replaced with _) 
 # 
 #
 
 COMPLIANCE_XMLNAME_PARAMS_ORDERED:
          - "router_hostname"
-         - "router_mgmt_ip"
+         - "router_ip"
  
 
 # Specify the remote directory on the server
